--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png"> 
   <title>Frontend Mentor | [Chat-illustration]</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="public/reset.css">
+  <link rel="stylesheet" href="style.css"> 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
@@ -17,6 +18,7 @@
 
 <body>
 
+  
   
 
 
