background and paragraph done

--- a/index.html
+++ b/index.html
@@ -18,10 +18,30 @@
 
 <body>
 
-  
-  
+  <main class="app">
+
+    <section class="app__background">
+
+      <div class="app__background--left"></div>
+
+    </section>
+
+    <section class="app__text">
+
+      <h1 class="app__text--title">Simple booking</h1>
+
+      <p class="app__text--paragraph">Stay in touch with our dog walkers throught the chat interface. This makes it easy to discuss arrangements and make bookings.
+        Once the walk has been completed you can rate your walker and book again all throught the chat.</p>
 
 
+    </section>
+
+
+
+
+
+  </main>
+  
 </body>
 
 </html>
