chat header done

--- a/index.html
+++ b/index.html
@@ -26,6 +26,43 @@
 
     </section>
 
+    <section class="app__chat">
+
+      <div class="app__chat__header">
+
+        <img class="app__chat__header--arrow" src="images/arrow-left.png" alt="left arrow icon">
+
+        <div class="app__chat__header__infos">
+
+          <img class="app__chat__header__infos--avatar" src="images/avatar.jpg" alt="avatar picture">
+
+          <div class="app__chat__header__infos__text">
+
+            <p class="app__chat__header__infos__text--name">Samuel Green</p>
+            <p class="app__chat__header__infos__text--sub-text">Available to Walk</p>
+
+          </div>
+
+        </div>
+
+        <img class="app__chat__header--dots" src="images/dots.png" alt="dots icon">
+
+      </div>
+
+      <div class="app__chat__main">
+
+
+
+      </div>
+
+      <div class="app__chat__footer">
+
+
+        
+      </div>
+
+    </section>
+
     <section class="app__text">
 
       <h1 class="app__text--title">Simple booking</h1>
@@ -35,10 +72,6 @@
 
 
     </section>
-
-
-
-
 
   </main>
   
