mobile version done

--- a/index.html
+++ b/index.html
@@ -51,13 +51,56 @@
 
       <div class="app__chat__main">
 
+        <div class="app__chat__main__left">
 
+          <p class="app__chat__main__left--text">That sounds great. I'd be happy to discuss more.</p>
+          <p class="app__chat__main__left--text">Could you send over some pictures of your dog, please ?</p>
+
+        </div>
+
+        <div class="app__chat__main__pictures">
+
+          <img class="app__chat__main__pictures--img" src="images/dog-image-1.jpg" alt="dog 1">
+          <img class="app__chat__main__pictures--img" src="images/dog-image-2.jpg" alt="dog 2">
+          <img class="app__chat__main__pictures--img" src="images/dog-image-3.jpg" alt="dog 3">
+
+        </div>
+
+        <div class="app__chat__main__right">
+
+          <p class="app__chat__main__right--text">Here are a few pictures. She's a happy girl !</p>
+          <p class="app__chat__main__right--text">Can you make it ?</p>
+
+        </div>
+
+        <div class="app__chat__main__left">
+
+          <p class="app__chat__main__left--text">She looks so happy ! The time we discussed works. How long shall i take her out for ?</p>
+
+        </div>
+
+        <div class="app__chat__main__radio">
+
+          <input type="radio" class="app__chat__main__radio--input1">
+          <p class="app__chat__main__radio--time1">30 minutes walk</p>
+          <p class="app__chat__main__radio--price1">$29</p>
+
+        </div>
+
+        <div class="app__chat__main__radio">
+
+          <input type="radio" class="app__chat__main__radio--input2">
+          <p class="app__chat__main__radio--time2">1 hour walk</p>
+          <p class="app__chat__main__radio--price2">$49</p>
+
+        </div>
 
       </div>
 
       <div class="app__chat__footer">
 
-
+        <input type="text" class="app__chat__footer--input" placeholder="Type a message...">
+        <img class="app__chat__footer--send" src="images/caret-circle-right.png" alt="send button">
         
       </div>
 
